Provides elegant solution to gradient over image, icon overflow fix
source: https://codepen.io/anon/pen/RPweox

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -130,7 +130,7 @@ h2{
 
 .row {
 
-    min-height: 73vh !important;
+    min-height: 78vh !important;
 
 }
 
@@ -266,7 +266,7 @@ ui.placeholder.segment .button, .ui.placeholder.segment .field, .ui.placeholder.
     min-height: 45vh !important;
 }
 
-
+/* div with the picture */
 }
 
 @media only screen and (min-width: 768px) and (max-width: 920px) {
@@ -289,5 +289,20 @@ ui.placeholder.segment .button, .ui.placeholder.segment .field, .ui.placeholder.
 
 
 
-/* .tablet.computer.row{ */
-/*     padding-top: unset !important; */
+.tablet.computer.row{
+     /* padding-top: unset !important; */
+
+}
+
+
+.ui.placeholder .header {
+    overflow: visible;
+}
+
+
+.home-background {
+    position: relative;
+    width: 100%;
+    height: 88vh;
+    background: linear-gradient(rgba(117, 203, 231, 0.9), rgba(19, 143, 194, 0.9)), url("../img/blur-stop.jpg");
+    background-size: cover;}
